--- a/installer/resources/themes/console/midnight/i2ptunnel.css
+++ b/installer/resources/themes/console/midnight/i2ptunnel.css
@@ -45,8 +45,7 @@
 #tunnelEditPage #optionsPortField,
 #tunnelEditPage #backupField,
 #tunnelEditPage #varianceField {
-    width: 150px;
-
+    width: 140px;
 }
 
 #tunnelEditPage #reachField label,
